fix DT-1577, fix gap between items in product list

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -285,11 +285,10 @@
 
 .product-item {
     position: relative;
-    margin-bottom: 2%;
+    margin-bottom: 20px;
     width: 32%;
     // Display 100% at mobile
     @media @mobile {
-        margin-bottom: 4%;
         width: 100%;
     }
 }
@@ -480,6 +479,9 @@
         @media @mobile {
             text-align: left;
         }
+    }
+    .image {
+        max-height: 100px;
     }
 }
 
